# self-improving-ai

./: .gitignore  pyproject.toml
prompts/: on_end.txt
src/self_improving_ai/: __init__.py  html_parser.py
tests/: test_html_parser.html  test_html_parser.py
