[project]
name = "self-improving-ai"
version = "0.1.0"
description = ""
authors = [
    {name = "rizki.judojono",email = "rizki.judojono@aroflo.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "self_improving_ai", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[tool.mypy]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
